[gd_scene load_steps=14 format=2]

[ext_resource path="res://Entities/Enemies/Miner/Miner.png" type="Texture" id=1]
[ext_resource path="res://Entities/Enemies/Miner/Miner.gd" type="Script" id=2]
[ext_resource path="res://Managing/Colliders/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/DamageManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entities/Enemies/Assets/HealthBarFull.png" type="Texture" id=5]
[ext_resource path="res://Entities/Enemies/Assets/HealthBarEmpty.png" type="Texture" id=6]
[ext_resource path="res://Entities/Enemies/MrBag/Light.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6.5, 2 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 8.0
height = 6.0

[sub_resource type="Animation" id=10]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "throw_head"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Walk"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}

[node name="Miner" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )
attackTimeRange = Vector2( 3, 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -14 )
hframes = 3
vframes = 3
frame = 6

[node name="SpiderSpawn" type="Position2D" parent="Sprite"]
position = Vector2( 11, -31 )

[node name="FlashLight" type="Light2D" parent="Sprite"]
visible = false
position = Vector2( -32, -17 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, -2 )
shape = SubResource( 5 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -11 )
shape = SubResource( 6 )

[node name="DamageManager" parent="." instance=ExtResource( 4 )]
maxHealth = 220
kbAmount = 20.0

[node name="Timers" type="Node" parent="."]

[node name="Walk" type="Timer" parent="Timers"]
wait_time = 1.5
autostart = true

[node name="Attack" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 10 )
anims/Idle = SubResource( 9 )
anims/RESET = SubResource( 7 )
anims/Walk = SubResource( 8 )

[node name="Healthbar" type="TextureProgress" parent="."]
margin_left = -9.0
margin_top = -37.0
margin_right = 9.0
margin_bottom = -32.0
max_value = 50.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="hurt" from="Hurtbox" to="DamageManager" method="take_damage"]
[connection signal="timeout" from="Timers/Walk" to="." method="choose_new_target"]
[connection signal="timeout" from="Timers/Attack" to="." method="attack"]

[editable path="Hurtbox"]
